--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Clio Programming Language</title>
     <meta content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://clio-lang.github.io/clio-editor/fonts/fira_code.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.perfect-scrollbar/1.4.0/css/perfect-scrollbar.min.css" />
