Fixed links + responsive layout

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
       </div>
       <div id="install">
         <h2> Install </h2>
-        To install, you need node.js, then to install clio you can run:
-        <code class="shell">npm install clio</code>
+        Currently, Clio is highly experimental and can only be installed from git. <br>
+        To install Clio please follow the instructions in
+        <a href="https://github.com/clio-lang/clio"> the github repository </a>.
       </div>
       <div id="community">
         <h2> Community </h2>
@@ -106,19 +107,19 @@
             <i class="fas fa-code"></i>
             RosettaCode
           </a>
-          <a class="community-link" href="">
+          <a class="community-link" href="https://medium.com/@eghbali">
             <i class="fab fa-medium"></i>
             Medium
           </a>
-          <a class="community-link" href="">
+          <a class="community-link" href="https://trello.com/b/WpwsB69B/clio">
             <i class="fab fa-trello"></i>
             Trello
           </a>
-          <a class="community-link" href="">
+          <!--a class="community-link" href="">
             <i class="fab fa-reddit-alien"></i>
             Reddit
-          </a>
-          <a class="community-link" href="">
+          </a-->
+          <a class="community-link" href="https://twitter.com/clio_lang">
             <i class="fab fa-twitter"></i>
             Twitter
           </a>
@@ -128,11 +129,11 @@
         <h2> Support </h2>
         Clio is a work in progress and it's not production ready yet, but you can help make it happen faster. Support the project and the creator on:
         <div class="support-list">
-          <a class="support-link" href="#">
+          <!--a class="support-link" href="#">
             <img src="/media/opencollective.svg" alt="">
             <span>Open Collective</span>
-          </a>
-          <a class="support-link" href="#">
+          </a-->
+          <a class="support-link" href="https://www.patreon.com/pouya">
             <img src="/media/patreon.svg" alt="">
             <span>Patreon</span>
           </a>
@@ -140,10 +141,10 @@
             <img src="/media/paypal.svg" alt="">
             <span>PayPal</span>
           </a>
-          <a class="support-link" href="https://github.com/clio-lang/clio/stargazers">
-            <img src="/media/star.svg" alt="">
-            <span>Star on Github</span>
-          </a>
+        </div>
+        <div class="support-star">
+          You can also support the project by giving it a star on
+          <a href="https://github.com/clio-lang/clio"> github </a>.
         </div>
       </div>
     </article>
