Added more links

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="/#install">Install</a>
         <a href="https://docs.clio-lang.org/learn">Learn</a>
         <a href="https://docs.clio-lang.org">Documentation</a>
+        <a href="https://forum.clio-lang.org">Forum</a>
         <a href="/#community">Community</a>
         <a href="/#support">Donate</a>
       </div>
@@ -95,10 +96,14 @@
             <i class="fab fa-github-alt"></i>
             Source
           </a>
-          <!--a class="community-link" href="https://discord.gg/tdQHa5r">
+          <a class="community-link" href="https://discord.gg/tdQHa5r">
             <i class="fab fa-discord"></i>
             Discord
-          </a-->
+          </a>
+          <a class="community-link" href="https://forum.clio-lang.org">
+            <i class="fab fa-discource"></i>
+            Disourse
+          </a>
           <a class="community-link" href="https://t.me/joinchat/B0kZo0kVldfXldTDqz95XA">
             <i class="fab fa-telegram"></i>
             Telegram
