--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             Discord
           </a>
           <a class="community-link" href="https://forum.clio-lang.org">
-            <i class="fab fa-discource"></i>
+            <i class="fab fa-discourse"></i>
             Disourse
           </a>
           <a class="community-link" href="https://t.me/joinchat/B0kZo0kVldfXldTDqz95XA">
