Fixed install instructions

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
       </div>
       <div id="install">
         <h2> Install </h2>
-        Currently, Clio is highly experimental and can only be installed from git. <br>
-        To install Clio please follow the instructions in
-        <a href="https://github.com/clio-lang/clio"> the github repository </a>.
+        Clio is hosted on NPM and can be installed using the following command:
+        <code class="shell">npm i -g clio-lang</cod>
       </div>
       <div id="community">
         <h2> Community </h2>
