--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div id="install">
         <h2> Install </h2>
         Clio is hosted on NPM and can be installed using the following command:
-        <code class="shell">npm i -g clio-lang</cod>
+        <code class="shell">npm i -g clio-lang</code>
       </div>
       <div id="community">
         <h2> Community </h2>
