--- a/index.html
+++ b/index.html
@@ -167,5 +167,14 @@
     <script>
       $('.clio-editor').clio_editor();
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136949479-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-136949479-1');
+    </script>
   </body>
 </html>
