Add Reddit community link

--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <i class="fab fa-trello"></i>
             Trello
           </a>
-          <!--a class="community-link" href="">
+          <a class="community-link" href="https://www.reddit.com/r/cliolang/">
             <i class="fab fa-reddit-alien"></i>
             Reddit
-          </a-->
+          </a>
           <a class="community-link" href="https://twitter.com/clio_lang">
             <i class="fab fa-twitter"></i>
             Twitter
