--- a/index.html
+++ b/index.html
@@ -95,15 +95,11 @@
             <i class="fab fa-github-alt"></i>
             Source
           </a>
-          <a class="community-link" href="https://discord.gg/tdQHa5r">
-            <i class="fab fa-discord"></i>
-            Discord
-          </a>
           <a class="community-link" href="https://forum.clio-lang.org">
             <i class="fab fa-discourse"></i>
             Disourse
           </a>
-          <a class="community-link" href="https://t.me/joinchat/B0kZo0kVldfXldTDqz95XA">
+          <a class="community-link" href="https://t.me/clio_lang">
             <i class="fab fa-telegram"></i>
             Telegram
           </a>
@@ -111,7 +107,7 @@
             <i class="fas fa-code"></i>
             RosettaCode
           </a>
-          <a class="community-link" href="https://medium.com/@eghbali">
+          <a class="community-link" href="https://medium.com/@pouyae">
             <i class="fab fa-medium"></i>
             Medium
           </a>
